--- a/doctors.html
+++ b/doctors.html
@@ -338,7 +338,7 @@
 											<div class="doc-info-cont">
 												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Ravi Prakash</a></h4>
 												<!--<p class="doc-speciality">Anaesthetic</p>-->
-												<h5 class="doc-department"><!--<img src="assets/img/specialities/specialities-05.png" class="img-fluid" alt="Speciality">-->Anaesthetic</h5>
+												<h5 class="doc-department"><img src="assets/img/specialities/specialities-11.png" class="img-fluid" alt="Speciality">Anaesthetic</h5>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
