--- a/lab-search.html
+++ b/lab-search.html
@@ -299,7 +299,7 @@
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name mb-2"><a href="pharmacy-details.html">Medlife Medical</a></h4>
+												<h4 class="doc-name mb-2"><a href="pharmacy-details.html">Appolo Diagnostic Center</a></h4>
 												<div class="rating mb-2">
 													<span class="badge badge-primary">4.0</span>
 													<i class="fas fa-star filled"></i>
@@ -307,14 +307,14 @@
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star"></i>
-													<span class="d-inline-block average-rating">(17)</span>
+													<span class="d-inline-block average-rating">(19)</span>
 												</div>
 												<div class="clinic-details">
 													<div class="clini-infos pt-3">
 												
-													<p class="doc-location mb-2"><i class="fas fa-phone-volume mr-1"></i> 320-795-8815</p>
-													<p class="doc-location mb-2 text-ellipse"><i class="fas fa-map-marker-alt mr-1"></i> 96 Red Hawk Road Cyrus, MN 56323 </p>
-													<p class="doc-location mb-2"><i class="fas fa-chevron-right mr-1"></i> Chemists, Surgical Equipment Dealer</p>
+													<p class="doc-location mb-2"><i class="fas fa-phone-volume mr-1"></i> 094314 49476</p>
+													<p class="doc-location mb-2 text-ellipse"><i class="fas fa-map-marker-alt mr-1"></i> Hajipur,, Cinema Rd, Anwarpur, Mishra Colony,<br> Hajipur, Bihar 844101 </p>
+													<p class="doc-location mb-2"><i class="fas fa-chevron-right mr-1"></i> Pathology Labs , Diagnostic Centres</p>
 													
 													<p class="doc-location mb-2"><i class="fas fa-chevron-right mr-1"></i> Opens at 08.00 AM</p>
 	
