--- a/doctors.html
+++ b/doctors.html
@@ -197,7 +197,7 @@
 									<li class="breadcrumb-item active" aria-current="page">Search</li>
 								</ol>
 							</nav>
-							<h2 class="breadcrumb-title">2245 matches found for : Dentist In BIHAR</h2>
+							<h2 class="breadcrumb-title">100 matches found : In Bihar</h2>
 						</div>
 						<div class="col-md-4 col-12 d-md-block d-none">
 							<div class="sort-by">
@@ -338,7 +338,7 @@
 											<div class="doc-info-cont">
 												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Ravi Prakash</a></h4>
 												<!--<p class="doc-speciality">Anaesthetic</p>-->
-												<h5 class="doc-department"><img src="assets/img/specialities/specialities-11.png" class="img-fluid" alt="Speciality">Anaesthetic</h5>
+												<h5 class="doc-department"><img src="assets/img/specialities/specialities-12.png" class="img-fluid" alt="Speciality">Anaesthetic</h5>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
@@ -373,8 +373,8 @@
 													</ul>
 												</div>
 												<div class="clinic-services">
-													<span>Dental Fillings</span>
-													<span> Whitneing</span>
+<!-- 													<span>Dental Fillings</span>
+													<span> Whitneing</span> -->
 												</div>
 											</div>
 										</div>
@@ -482,7 +482,7 @@
 											<div class="doc-info-cont">
 												<h4 class="doc-name"><a href="doctor-profile.html">Dr. O.P Chauhan</a></h4>
 												<!--<p class="doc-speciality">Skin</p>-->
-												<p class="doc-department"><!--<img src="assets/img/specialities/specialities-04.png" class="img-fluid" alt="Speciality">-->Skin </p>
+												<p class="doc-department"><img src="assets/img/specialities/specialities-13.png" class="img-fluid" alt="Speciality">Skin </p>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
@@ -517,8 +517,8 @@
 													</ul>
 												</div>
 												<div class="clinic-services">
-													<span>Dental Fillings</span>
-													<span> Whitneing</span>
+<!-- 													<span>Dental Fillings</span>
+													<span> Whitneing</span> -->
 												</div>
 											</div>
 										</div>
@@ -554,7 +554,7 @@
 											<div class="doc-info-cont">
 												<h4 class="doc-name"><a href="doctor-profile.html">Dr. G.M Sinha</a></h4>
 												<!--<p class="doc-speciality">Eye</p>-->
-												<p class="doc-department"><!--<img src="assets/img/specialities/specialities-01.png" class="img-fluid" alt="Speciality">-->Eye</p>
+												<p class="doc-department"><img src="assets/img/specialities/specialities-11.png" class="img-fluid" alt="Speciality">Eye</p>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
@@ -589,8 +589,8 @@
 													</ul>
 												</div>
 												<div class="clinic-services">
-													<span>Dental Fillings</span>
-													<span> Whitneing</span>
+<!-- 													<span>Dental Fillings</span>
+													<span> Whitneing</span> -->
 												</div>
 											</div>
 										</div>
@@ -661,8 +661,8 @@
 													</ul>
 												</div>
 												<div class="clinic-services">
-													<span>Dental Fillings</span>
-													<span> Whitneing</span>
+<!-- 													<span>Dental Fillings</span>
+													<span> Whitneing</span> -->
 												</div>
 											</div>
 										</div>
