--- a/search.html
+++ b/search.html
@@ -198,7 +198,7 @@
 									<li class="breadcrumb-item active" aria-current="page">Search</li>
 								</ol>
 							</nav>
-							<h2 class="breadcrumb-title">2245 matches found for : Dentist In BIHAR</h2>
+							<h2 class="breadcrumb-title">100 matches found : In Bihar</h2>
 						</div>
 						<div class="col-md-4 col-12 d-md-block d-none">
 							<div class="sort-by">
@@ -287,7 +287,31 @@
 									<div>
 										<label class="custom_check">
 											<input type="checkbox" name="select_specialist">
-											<span class="checkmark"></span> Cardiologist
+											<span class="checkmark"></span>Otolaryngology
+										</label>
+									</div>
+									<div>
+										<label class="custom_check">
+											<input type="checkbox" name="select_specialist">
+											<span class="checkmark"></span>Gastroenterologist
+										</label>
+									</div>
+									<div>
+										<label class="custom_check">
+											<input type="checkbox" name="select_specialist">
+											<span class="checkmark"></span>Gynecologist
+										</label>
+									</div>
+									<div>
+										<label class="custom_check">
+											<input type="checkbox" name="select_specialist">
+											<span class="checkmark"></span>Acupressure Therapy
+										</label>
+									</div>
+									<div>
+										<label class="custom_check">
+											<input type="checkbox" name="select_specialist">
+											<span class="checkmark"></span>Rhinology
 										</label>
 									</div>
 								</div>
@@ -309,13 +333,13 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-01.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-02.jpg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Ruby Perrin</a></h4>
-												<p class="doc-speciality">MDS - Periodontology and Oral Implantology, BDS</p>
-												<h5 class="doc-department"><img src="assets/img/specialities/specialities-05.png" class="img-fluid" alt="Speciality">Dentist</h5>
+												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Ravi Prakash</a></h4>
+												<!--<p class="doc-speciality">Anaesthetic</p>-->
+												<h5 class="doc-department"><img src="assets/img/specialities/specialities-12.png" class="img-fluid" alt="Speciality">Anaesthetic</h5>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
@@ -350,8 +374,8 @@
 													</ul>
 												</div>
 												<div class="clinic-services">
-													<span>Dental Fillings</span>
-													<span> Whitneing</span>
+<!-- 													<span>Dental Fillings</span>
+													<span> Whitneing</span> -->
 												</div>
 											</div>
 										</div>
@@ -381,12 +405,12 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-02.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-03.jpg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Darren Elder</a></h4>
-												<p class="doc-speciality">BDS, MDS - Oral & Maxillofacial Surgery</p>
+												<h4 class="doc-name"><a href="doctor-profile.html">Dr.Daya Shankar</a></h4>
+												<!--<p class="doc-speciality">Dentist</p>-->
 												<h5 class="doc-department"><img src="assets/img/specialities/specialities-05.png" class="img-fluid" alt="Speciality">Dentist</h5>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
@@ -397,7 +421,7 @@
 													<span class="d-inline-block average-rating">(35)</span>
 												</div>
 												<div class="clinic-details">
-													<p class="doc-location"><i class="fas fa-map-marker-alt"></i>Hajipur, BIHAR</p>
+													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</p>
 													<ul class="clinic-gallery">
 														<li>
 															<a href="assets/img/features/feature-01.jpg" data-fancybox="gallery">
@@ -433,7 +457,7 @@
 													<li><i class="far fa-thumbs-up"></i> 100%</li>
 													<li><i class="far fa-comment"></i> 35 Feedback</li>
 													<li><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</li>
-													<li><i class="far fa-money-bill-alt"></i>₹50 - ₹300 <i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i></li>
+													<li><i class="far fa-money-bill-alt"></i> ₹50 - ₹300 <i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i></li>
 												</ul>
 											</div>
 											<div class="clinic-booking">
@@ -453,13 +477,13 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-03.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-05.jpeg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Deborah Angel</a></h4>
-												<p class="doc-speciality">MBBS, MD - General Medicine, DNB - Cardiology</p>
-												<p class="doc-department"><img src="assets/img/specialities/specialities-04.png" class="img-fluid" alt="Speciality">Cardiology</p>
+												<h4 class="doc-name"><a href="doctor-profile.html">Dr. O.P Chauhan</a></h4>
+												<!--<p class="doc-speciality">Skin</p>-->
+												<p class="doc-department"><img src="assets/img/specialities/specialities-13.png" class="img-fluid" alt="Speciality">Skin </p>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
@@ -469,7 +493,7 @@
 													<span class="d-inline-block average-rating">(27)</span>
 												</div>
 												<div class="clinic-details">
-													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</p>
+													<p class="doc-location"><i class="fas fa-map-marker-alt"></i>Hajipur, BIHAR</p>
 													<ul class="clinic-gallery">
 														<li>
 															<a href="assets/img/features/feature-01.jpg" data-fancybox="gallery">
@@ -494,8 +518,8 @@
 													</ul>
 												</div>
 												<div class="clinic-services">
-													<span>Dental Fillings</span>
-													<span> Whitneing</span>
+<!-- 													<span>Dental Fillings</span>
+													<span> Whitneing</span> -->
 												</div>
 											</div>
 										</div>
@@ -525,13 +549,13 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-04.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-06.jpg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Sofia Brient</a></h4>
-												<p class="doc-speciality">MBBS, MS - General Surgery, MCh - Urology</p>
-												<p class="doc-department"><img src="assets/img/specialities/specialities-01.png" class="img-fluid" alt="Speciality">Urology</p>
+												<h4 class="doc-name"><a href="doctor-profile.html">Dr. G.M Sinha</a></h4>
+												<!--<p class="doc-speciality">Eye</p>-->
+												<p class="doc-department"><img src="assets/img/specialities/specialities-11.png" class="img-fluid" alt="Speciality">Eye</p>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
@@ -541,7 +565,7 @@
 													<span class="d-inline-block average-rating">(4)</span>
 												</div>
 												<div class="clinic-details">
-													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA</p>
+													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</p>
 													<ul class="clinic-gallery">
 														<li>
 															<a href="assets/img/features/feature-01.jpg" data-fancybox="gallery">
@@ -566,8 +590,8 @@
 													</ul>
 												</div>
 												<div class="clinic-services">
-													<span>Dental Fillings</span>
-													<span> Whitneing</span>
+<!-- 													<span>Dental Fillings</span>
+													<span> Whitneing</span> -->
 												</div>
 											</div>
 										</div>
@@ -597,13 +621,13 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-06.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-04.jpg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Katharine Berthold</a></h4>
-												<p class="doc-speciality">MS - Orthopaedics, MBBS, M.Ch - Orthopaedics</p>
-												<p class="doc-department"><img src="assets/img/specialities/specialities-03.png" class="img-fluid" alt="Speciality">Orthopaedics</p>
+												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Ashma Parvin</a></h4>
+												<!--<p class="doc-speciality">Gayeni</p>-->
+												<p class="doc-department"><!--<img src="assets/img/specialities/specialities-03.png" class="img-fluid" alt="Speciality">-->Gayeni</p>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
@@ -638,8 +662,8 @@
 													</ul>
 												</div>
 												<div class="clinic-services">
-													<span>Dental Fillings</span>
-													<span> Whitneing</span>
+<!-- 													<span>Dental Fillings</span>
+													<span> Whitneing</span> -->
 												</div>
 											</div>
 										</div>
