--- a/search.html
+++ b/search.html
@@ -72,7 +72,7 @@
 							<li class="has-submenu">
 								<a href="">Doctors <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="doctor.html">Doctor </a></li>
+									<li><a href="doctors.html">Doctor </a></li>
 									<li><a href="appointments.html">Appointments</a></li>
 									<!--<li><a href="schedule-timings.html">Schedule Timing</a></li>
 									<li><a href="my-patients.html">Patients List</a></li>
