--- a/lab-details.html
+++ b/lab-details.html
@@ -639,7 +639,7 @@ I can't forget how many efforts made by Dr.Pallavi every morning and evening she
 								
 									<!-- Write Review -->
 									<div class="write-review">
-										<h4>Write a review for <strong>Medlife Medical</strong></h4>
+										<h4>Write a review for <strong>Appolo Diagnostic Center</strong></h4>
 										
 										<!-- Write Review Form -->
 										<form>
@@ -709,46 +709,46 @@ I can't forget how many efforts made by Dr.Pallavi every morning and evening she
 												<div class="widget-content">
 													<div class="listing-hours">
 														<div class="listing-day current">
-															<div class="day">Today <span>5 Nov 2019</span></div>
+															<!--<div class="day">Today <span>5 Nov 2019</span></div>-->
 															<div class="time-items">
 																<span class="open-status"><span class="badge bg-success-light">Open Now</span></span>
-																<span class="time">07:00 AM - 09:00 PM</span>
+																<span class="time">08:00 AM - 09:00 PM</span>
 															</div>
 														</div>
 														<div class="listing-day">
 															<div class="day">Monday</div>
 															<div class="time-items">
-																<span class="time">07:00 AM - 09:00 PM</span>
+																<span class="time">08:00 AM - 09:00 PM</span>
 															</div>
 														</div>
 														<div class="listing-day">
 															<div class="day">Tuesday</div>
 															<div class="time-items">
-																<span class="time">07:00 AM - 09:00 PM</span>
+																<span class="time">08:00 AM - 09:00 PM</span>
 															</div>
 														</div>
 														<div class="listing-day">
 															<div class="day">Wednesday</div>
 															<div class="time-items">
-																<span class="time">07:00 AM - 09:00 PM</span>
+																<span class="time">08:00 AM - 09:00 PM</span>
 															</div>
 														</div>
 														<div class="listing-day">
 															<div class="day">Thursday</div>
 															<div class="time-items">
-																<span class="time">07:00 AM - 09:00 PM</span>
+																<span class="time">08:00 AM - 09:00 PM</span>
 															</div>
 														</div>
 														<div class="listing-day">
 															<div class="day">Friday</div>
 															<div class="time-items">
-																<span class="time">07:00 AM - 09:00 PM</span>
+																<span class="time">08:00 AM - 09:00 PM</span>
 															</div>
 														</div>
 														<div class="listing-day">
 															<div class="day">Saturday</div>
 															<div class="time-items">
-																<span class="time">07:00 AM - 09:00 PM</span>
+																<span class="time">08:00 AM - 09:00 PM</span>
 															</div>
 														</div>
 														<div class="listing-day closed">
