--- a/lab-details.html
+++ b/lab-details.html
@@ -709,7 +709,7 @@ I can't forget how many efforts made by Dr.Pallavi every morning and evening she
 												<div class="widget-content">
 													<div class="listing-hours">
 														<div class="listing-day current">
-															<!--<div class="day">Today <span>5 Nov 2019</span></div>-->
+															<div class="day">Today <span></span></div>
 															<div class="time-items">
 																<span class="open-status"><span class="badge bg-success-light">Open Now</span></span>
 																<span class="time">08:00 AM - 09:00 PM</span>
