blog-deatial.html

--- a/blog-details.html
+++ b/blog-details.html
@@ -379,7 +379,7 @@ With today’s partnership with ICICI Lombard, doctors and clinics across the co
 											</div>
 										</li>
 									</ul>
-								</div>--
+								</div>-->
 								</div>
 								
 								<div class="card new-comment clearfix">
