--- a/diagnostics-all.html
+++ b/diagnostics-all.html
@@ -314,12 +314,12 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Benzaxapine Croplex</a> 
+												<a href="product-description.html" tabindex="-1">Skin Test</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$19.00</span>
-													<span class="price-strike">$45.00</span>
+													<!--<span class="price">$19.00</span>
+													<span class="price-strike">$45.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -340,11 +340,11 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Rapalac Neuronium</a> 
+												<a href="product-description.html" tabindex="-1">Angiography</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$16.00</span>
+													<!--<span class="price">$16.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -365,11 +365,11 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Ombinazol Bonibamol</a> 
+												<a href="product-description.html" tabindex="-1">Bone Scan</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$22.00</span>
+													<!--<span class="price">$22.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -390,12 +390,12 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Dantotate Dantodazole</a> 
+												<a href="product-description.html" tabindex="-1">Dick Test</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$10.00</span>
-													<span class="price-strike">$12.00</span>
+													<!--<span class="price">$10.00</span>
+													<span class="price-strike">$12.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -416,11 +416,11 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Acetrace Amionel</a> 
+												<a href="product-description.html" tabindex="-1">Rubin’s Test</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$7.00</span>
+													<!--<span class="price">$7.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -441,11 +441,11 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Ergorinex Caffeigestin</a> 
+												<a href="product-description.html" tabindex="-1">Lumbar Puncture</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$15.00</span>
+													<!--<span class="price">$15.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -470,7 +470,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$26.00</span>
+													<!--<span class="price">$26.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -491,12 +491,12 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Lysofranil Dorzostin</a> 
+												<a href="product-description.html" tabindex="-1">Pap smear</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$10.00</span>
-													<span class="price-strike">$12.00</span>
+													<!--<span class="price">$10.00</span>
+													<span class="price-strike">$12.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -517,11 +517,11 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Nitrolozin Zithrotropin</a> 
+												<a href="product-description.html" tabindex="-1">Blood Testing</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$12.00</span>
+													<!--<span class="price">$12.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -542,11 +542,11 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Cordacriptine Mardipine</a> 
+												<a href="product-description.html" tabindex="-1">Colonoscopy</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$9.00</span>
+													<!--<span class="price">$9.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -567,11 +567,11 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Iconevist Ampyplex</a> 
+												<a href="product-description.html" tabindex="-1">Rapid Strep Test</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$16.00</span>
+													<!--<span class="price">$16.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -592,7 +592,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Alcafsteride Omebide</a> 
+												<a href="product-description.html" tabindex="-1">Foot X-Ray</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -607,7 +607,7 @@
                             	</div>
                             	<div class="col-md-12 col-lg-4 col-xl-4 product-custom">
 	                                <div class="profile-widget">
-										<div class="doc-img">
+										<!--<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
 												<img class="img-fluid" alt="Product image" src="assets/img/products/product15.jpg">
 											</a>
@@ -682,7 +682,7 @@
 									</div>		
                             	</div>
 
-                             </div>
+                             </div>-->
                              <div class="col-md-12 text-center">
                              	<a href="#" class="btn book-btn1 mb-4">Load More</a>
                          	</div>
