--- a/diagnostics-all.html
+++ b/diagnostics-all.html
@@ -281,8 +281,8 @@
 
 							<div class="row align-items-center pb-3">	
 								<div class="col-md-4 col-12 d-md-block d-none custom-short-by">
-									<h3 class="title pharmacy-title">Medlife Medical</h3>
-									<p class="doc-location mb-2 text-ellipse pharmacy-location"><i class="fas fa-map-marker-alt mr-1"></i> BagDulhan Road,Opposite Development of Mathematics,BaghDulhan ,Hajipur,Bihar,844101 </p>
+									<h3 class="title pharmacy-title">Appolo Diagnostic Center</h3>
+									<p class="doc-location mb-2 text-ellipse pharmacy-location"><i class="fas fa-map-marker-alt mr-1"></i>Hajipur,, Cinema Rd, Anwarpur, Mishra Colony,<br> Hajipur, Bihar 844101 </p>
 									<span class="sort-title">Showing 6 of 98 products</span>
 								</div>
 								<div class="col-md-8 col-12 d-md-block d-none custom-short-by">
