--- a/diagnostics-all.html
+++ b/diagnostics-all.html
@@ -306,7 +306,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -332,7 +332,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product13.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product13.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -357,7 +357,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product1.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product1.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -382,7 +382,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product2.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product2.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -408,7 +408,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product12.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product12.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -433,7 +433,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product11.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product11.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -458,7 +458,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product3.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product3.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -483,7 +483,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product10.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product10.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -509,7 +509,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product4.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product4.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -534,7 +534,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product14.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product14.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -559,7 +559,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product5.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product5.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -584,7 +584,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product6.jpg">
+												<img style="height: 300px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product6.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
