--- a/diagnostics-all.html
+++ b/diagnostics-all.html
@@ -416,7 +416,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Rubin’s Test</a> 
+												<a href="product-description.html" tabindex="-1">X-Rays</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -466,7 +466,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Alispirox Aerorenone</a> 
+												<a href="product-description.html" tabindex="-1">Urinary Catheterization</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
