--- a/diagnostics-all.html
+++ b/diagnostics-all.html
@@ -596,7 +596,7 @@
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
-													<span class="price">$7.00</span>
+													<!--<span class="price">$7.00</span>-->
 												</div>
 												<div class="col-lg-6 text-right">
 													<a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
