--- a/diagnostics-all.html
+++ b/diagnostics-all.html
@@ -131,7 +131,7 @@
 							<li class="has-submenu active">
 								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="diagnostics-index.html">Diagnostics</a></li>
+									<!--<li><a href="diagnostics-index.html">Diagnostics</a></li>-->
 									<li class="active"><a href="diagnostics-all.html">Diagnostics List</a></li>
 									<li><a href="lab-search.html">Lab Search</a></li>
 									<li><a href="lab-details.html">Lab Details</a></li>
@@ -196,10 +196,10 @@
 							<nav aria-label="breadcrumb" class="page-breadcrumb">
 								<ol class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Home</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Pain Relif</li>
+									<li class="breadcrumb-item active" aria-current="page">Diagnostics</li>
 								</ol>
 							</nav>
-							<h2 class="breadcrumb-title">Pain Relif	<span class="text-small text-white ml-2"> <b>70 Products</b></span></h2>
+							<!--<h2 class="breadcrumb-title">Pain Relif	<span class="text-small text-white ml-2"> <b>70 Products</b></span></h2>-->
 						</div>
 					</div>
 				</div>
@@ -228,43 +228,43 @@
 									<div>
 										<label class="custom_check">
 											<input type="checkbox" name="gender_type" checked>
-											<span class="checkmark"></span> Family Care
+											<span class="checkmark"></span> Diabetes
 										</label>
 									</div>
 									<div>
 										<label class="custom_check">
 											<input type="checkbox" name="gender_type">
-											<span class="checkmark"></span> Skin Care
+											<span class="checkmark"></span> Cancer
 										</label>
 									</div>
 									<div>
 										<label class="custom_check">
 											<input type="checkbox" name="gender_type">
-											<span class="checkmark"></span> Hair Care
+											<span class="checkmark"></span> Skin
 										</label>
 									</div>
 									<div>
 										<label class="custom_check">
 											<input type="checkbox" name="gender_type">
-											<span class="checkmark"></span> Lip Care
+											<span class="checkmark"></span> Kidney
 										</label>
 									</div>
 									<div>
 										<label class="custom_check">
 											<input type="checkbox" name="gender_type">
-											<span class="checkmark"></span> Men's Care
+											<span class="checkmark"></span> Digestion
 										</label>
 									</div>
 									<div>
 										<label class="custom_check">
 											<input type="checkbox" name="gender_type">
-											<span class="checkmark"></span> Women's Care
+											<span class="checkmark"></span> Fever
 										</label>
 									</div>
 									<div>
 										<label class="custom_check">
 											<input type="checkbox" name="gender_type">
-											<span class="checkmark"></span> Baby care
+											<span class="checkmark"></span> Bone
 										</label>
 									</div>
 								</div>
