--- a/booking.html
+++ b/booking.html
@@ -111,7 +111,7 @@
 							<li class="has-submenu">
 								<a href="">Pharmacy <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="pharmacy-index.html">Pharmacy</a></li>
+									<!--<li><a href="pharmacy-index.html">Pharmacy</a></li>-->
 									<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
 									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
 									<li><a href="product-all.html">Product</a></li>
@@ -124,7 +124,7 @@
 							<li class="has-submenu">
 								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="diagnostics-index.html">Diagnostics</a></li>
+									<!--<li><a href="diagnostics-index.html">Diagnostics</a></li>-->
 		                                                	<li><a href="diagnostics-all.html">Diagnostics List</a></li>
 									<li><a href="lab-search.html">Lab Search</a></li>
 									<li><a href="lab-details.html">Lab Details</a></li>
