--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-		<title>Doctor Khojo Online</title>
+		<title>Doctor Khojo </title>
 		
 		<!-- Favicons -->
 		<link type="image/x-icon" href="assets/img/favicon.png" rel="icon">
@@ -110,7 +110,7 @@
 							<li class="has-submenu">
 								<a href="">Pharmacy <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="pharmacy-index.html">Pharmacy</a></li>
+									<!--<li><a href="pharmacy-index.html">Pharmacy</a></li>-->
 									<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
 									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
 									<li><a href="product-all.html">Product</a></li>
@@ -123,7 +123,7 @@
 							<li class="has-submenu">
 								<a href="">Diagnostics <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="diagnostics-index.html">Diagnostics</a></li>
+									<!--<li><a href="diagnostics-index.html">Diagnostics</a></li>-->
 									<li><a href="diagnostics-all.html">Diagnostics List</a></li>
 									<li><a href="lab-search.html">Lab Search</a></li>
 									<li><a href="lab-details.html">Lab Details</a></li>
