--- a/patient-dashboard.html
+++ b/patient-dashboard.html
@@ -108,7 +108,7 @@
 							<li class="has-submenu">
 								<a href="">Pharmacy <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
-									<li><a href="pharmacy-index.html">Pharmacy</a></li>
+									<!--<li><a href="pharmacy-index.html">Pharmacy</a></li>-->
 									<li><a href="pharmacy-details.html">Pharmacy Details</a></li>
 									<li><a href="pharmacy-search.html">Pharmacy Search</a></li>
 									<li><a href="product-all.html">Product</a></li>
