--- a/blog-details.html
+++ b/blog-details.html
@@ -161,7 +161,7 @@
 									<!--<li><a href="forgot-password.html">Forgot Password</a></li>-->
 								</ul>
 							</li>	
-							<li class="has-submenu">
+							<li class="has-submenu active">
 								<a href="">Blog <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li><a href="blog-list.html">Blog List</a></li>
