blog-detail.html

--- a/blog-details.html
+++ b/blog-details.html
@@ -161,12 +161,12 @@
 									<!--<li><a href="forgot-password.html">Forgot Password</a></li>-->
 								</ul>
 							</li>	
-							<li class="has-submenu ">
+							<li class="has-submenu active ">
 								<a href="">Blog <i class="fas fa-chevron-down"></i></a>
-								<ul class="submenu active">
+								<ul class="submenu ">
 									<li><a href="blog-list.html">Blog List</a></li>
 									<li><a href="blog-grid.html">Blog Grid</a></li>
-									<li><a href="blog-details.html">Blog Details</a></li>
+									<li class="active" ><a href="blog-details.html">Blog Details</a></li>
 								</ul>
 							</li>
 							<li class="has-submenu">
